# blast-gen-ai

./: README.md  pyproject.toml
blast_gen_ai/: arxiv.py
notebooks/: cross_entropy.ipynb  data_munging.ipynb
