[tool.poetry]
name = "blast_gen_ai"
version = "0.1.0"
description = "A Mock Company Demo for Generative AI"
authors = ["Scott McKean <scott.mckean@databricks.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pytest = "^8.3.2"
databricks-sdk = "^0.29.0"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
databricks-connect = "~14.3"
setuptools = "^72.1.0"
unstructured = {version = "0.10.30", extras = ["docx", "pdf"]}
libmagic = "^1.0"
llama-index = {extras = ["langchain"], version = "^0.10.59"}
langchain = "^0.2.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
